Next release
============

Documentation
-------------

- Add examples to ``repoze.bfg.url.model_url`` docstring.

Templates
---------

- Remove ``ez_setup.py`` and its import from all paster templates,
  samples, and tutorials for ``distribute`` compatibility.  The
  documentation already explains how to install virtualenv (which will
  include some ``setuptools`` package), so these files, imports and
  usages were superfluous.

Deprecations
------------

- The ``options`` kw arg to the ``repoze.bfg.router.make_app``
  function is deprecated.  In its place is the keyword argument
  ``settings``.  The ``options`` keyword continues to work, and a
  deprecation warning is not emitted when it is detected.  However,
  the paster templates, code samples, and documentation now make
  reference to ``settings`` rather than ``options``.  This
  change/deprecation was mainly made for purposes of clarity and
  symmetry with the ``get_settings()`` API and dicussions of
  "settings" in various places in the docs: we want to use the same
  name to refer to the same thing everywhere.

1.1b3 (2009-11-06)
==================

Features
--------

- ``repoze.bfg.testing.registerRoutesMapper`` testing facility added.
  This testing function registers a routes "mapper" object in the
  registry, for tests which require its presence.  This function is
  documented in the ``repoze.bfg.testing`` API documentation.

Bug Fixes
---------

- Compound statements that used an assignment entered into in an
  interactive IPython session invoked via ``paster bfgshell`` no
  longer fail to mutate the shell namespace correctly.  For example,
  this set of statements used to fail::

    In [2]: def bar(x): return x
      ...:
    In [3]: list(bar(x) for x in 'abc')
    Out[3]: NameError: 'bar'

  In this release, the ``bar`` function is found and the correct
  output is now sent to the console.  Thanks to Daniel Holth for the
  patch.

- The ``bfgshell`` command did not function properly; it was still